# basecamp

./: Cargo.toml  docker-compose.yml
.github/workflows/: code-quality.yml
bc-api-client/: Cargo.toml
bc-api-client/src/: error.rs  lib.rs  request.rs  response.rs
bc-api-client/src/auth/: basic.rs  bearer.rs  headers.rs  login.rs  mod.rs
bc-batch/: Cargo.toml
bc-batch/bc-batch-derive/: Cargo.toml
bc-batch/bc-batch-derive/src/: lib.rs
bc-batch/src/: lib.rs
bc-database/: Cargo.toml
bc-database/bc-record-derive/: Cargo.toml
bc-database/bc-record-derive/src/: builder.rs  field.rs  lib.rs  utils.rs
bc-database/migrations/: 20240929171541_test.sql
bc-database/src/: lib.rs  postgres.rs
bc-database/src/postgres/: mod.rs  options.rs  record.rs
bc-hash/: Cargo.toml
bc-hash/src/: hmac.rs  lib.rs  password.rs
bc-query/: Cargo.toml
bc-query-test/: Cargo.toml
bc-query-test/src/: lib.rs
bc-query/src/: lib.rs
bc-utils/: Cargo.toml
bc-utils/bc-utils-derive/: Cargo.toml
bc-utils/bc-utils-derive/src/: lib.rs
bc-utils/src/: lib.rs
