[package]
name = "bc-api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
http = { version = "1.3" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
