[package]
name = "bc-database"
version = "0.1.0"
edition = "2024"

[features]
default = []
postgres = ["dotenvy", "sqlx", "tracing"]

[dependencies]
dotenvy = { version = "0.15", optional = true }
sqlx = { version = "0.8", features = ["migrate", "postgres", "runtime-tokio"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
