[package]
name = "bc-hash"
version = "0.1.0"
edition = "2021"

[features]
hmac = ["dep:hmac"]
password = ["argon2"]

[dependencies]
argon2 = { version = "0.5", optional = true }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
sha3 = { version = "0.10" }
hmac = { version = "0.12", optional = true }
